--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,7 @@ table {
 }
 
 .nav-container {
-	grid-column: 4 / 14;
+	grid-column: 5 / 13;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -103,10 +103,34 @@ table {
 	font-weight: 700;
 }
 
+.nav-row ul li a {
+  color: #18272F;
+  position: relative;
+  text-decoration: none;
+	opacity: 0.7;
+}
+
+.nav-row ul li a::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 0.25em;
+  border-radius: 0.25em;
+  background-color: #000;
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform .3s ease-in-out;
+}
+
+.nav-row ul li a:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
+}
+
 .nav-row ul li a:hover {
-	border: 1px solid #000;
-	background-color: #000;
-	color: #fff;
+	opacity: 1;
 }
 
 .logo {
@@ -114,7 +138,7 @@ table {
 }
 
 .hero-content {
-	grid-column: 4 / 11;
+	grid-column: 5 / 10;
 	grid-row: 3;
 }
 
@@ -129,22 +153,31 @@ table {
 
 .hero-subtitle {
 	font-family: 'Josefin Sans', sans-serif;
-	font-size: 2em;
+	font-size: 2.5em;
 	font-weight: 400;
 	padding-bottom: 1.5em;
 	opacity: 0.7;
 	letter-spacing: 0.1em;
 }
 
-@media (max-width: 720px) {
+@media (max-width: 1130px) {
 	.hero-title {
-		font-size: 2.4em;
+		font-size: 3em;
 	}
 	.hero-subtitle {
-		font-size: 1em;
+		font-size: 2em;
 	}
 	.hero-button {
-		font-size: 0.6em;
+		font-size: 0.8em;
+	}
+	.nav-row li:nth-of-type(-n+4) {
+		display: none;
+	}
+	.nav-container {
+		grid-column: 2 / 16;
+	}
+	.hero-content {
+		grid-column: 2 / 11;
 	}
 }
 
@@ -158,15 +191,12 @@ table {
 	background-color: #A7171A;
 	color: #fff;
 	font-weight: 700;
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+	transition: all .5s;
 }
 
 .hero-button:hover {
 	border: #A7171A solid 1px;
-	background-color: #fff;
 	color: #a7171a;
-}
-
-.active {
-	background-color: #000;
-	color: #fff;
+	background-color: #fff;
 }
